# ShadowFall

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/config/: config.json
engine/: CMakeLists.txt
engine/include/: engine.h
engine/include/core/: Application.h  Logger.h
engine/include/input/: InputManager.h
engine/include/managers/: ResourceManager.h
engine/include/resources/: AudioResource.h  JSONResource.h  Resource.h  TextureResource.h
engine/include/resources/types/: Resource.h  ResourceType.h
engine/src/: engine.cpp
engine/src/core/: Application.cpp  Logger.cpp
engine/src/input/: InputManager.cpp
engine/src/resources/: AudioResource.cpp  JSONResource.cpp  TextureResource.cpp
game/: CMakeLists.txt
game/include/core/: Game.h
game/include/game/: Game.h
game/src/: main.cpp
game/src/core/: Game.cpp
game/src/game/: Game.cpp
